[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflect-mcp"
version = "0.1.0"
description = "MCP server for Reflect Notes API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
reflect-mcp = "reflect_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/reflect-mcp"
Repository = "https://github.com/yourusername/reflect-mcp"

[tool.hatch.build.targets.wheel]
packages = ["reflect_mcp"]